--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
          <h1>O seu próximo <span>destino</span> pode estar aqui...</h1>
 
         <p>
+            
             Aqui você encontra uma seleção de <strong> pacotes completos </strong> para as suas férias!
         </p>
 
@@ -52,6 +53,8 @@
         <p>
             Se você ainda não tem um destino definido, confira nossa seção de ofertas.
         </p>
+        
+        <p>PROJETO 02</p>
 
     </div>
 
